* [DatePicker] Fixed overflow of full width demo component

--- a/demo/src/Views/DatePicker/DatePickerView.scss
+++ b/demo/src/Views/DatePicker/DatePickerView.scss
@@ -11,6 +11,10 @@
 
 .dp_full-width {
   --dp-width: 100%;
+
+  .dp__wrapper {
+    width: var(--dp-width);
+  }
 }
 
 .right-container {
